--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,72 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact - Ethan Lavogez</title>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-5">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <!-- Brand -->
+            <a class="navbar-brand" href="#">Ethan Lavogez</a>
+            
+            <!-- Hamburger menu for small screens -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- Left-aligned navigation links -->
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">A propos de moi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="skills.html">Compétences</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="experience.html">Experiences</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="education.html">Formation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+
+                <!-- Right-aligned custom tab -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-primary" href="custom.html">Custom Onglet</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container" style="margin-top: 80px;">
         <h1>Contact</h1>
-        <p>Email: john.doe@example.com</p>
-        <p>GitHub: <a href="#">github.com/johndoe</a></p>
-        <p>LinkedIn: <a href="#">linkedin.com/in/johndoe</a></p>
+        <p>Vous pouvez me contacter via les moyens suivants :</p>
+        <ul>
+            <li><strong>Email :</strong> ethan.lavogez@example.com</li>
+            <li><strong>Téléphone :</strong> +33 6 12 34 56 78</li>
+            <li><strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/ethanlavogez" target="_blank">linkedin.com/in/ethanlavogez</a></li>
+            <li><strong>GitHub :</strong> <a href="https://github.com/ethanlavogez" target="_blank">github.com/ethanlavogez</a></li>
+        </ul>
+        <p>N'hésitez pas à me laisser un message pour toute question ou collaboration !</p>
     </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
