--- a/education.html
+++ b/education.html
@@ -1,16 +1,79 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education</title>
+    <title>Education - Ethan Lavogez</title>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Education</h1>
-        <p>Details about your education go here.</p>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <!-- Brand -->
+            <a class="navbar-brand" href="#">Ethan Lavogez</a>
+            
+            <!-- Hamburger menu for small screens -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- Left-aligned navigation links -->
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">A propos de moi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="skills.html">Compétences</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="experience.html">Experiences</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="education.html">Formation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+
+                <!-- Right-aligned custom tab -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-primary" href="custom.html">Custom Onglet</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container" style="margin-top: 80px;">
+        <h1>Formation</h1>
+        <p>Voici un aperçu de mon parcours éducatif :</p>
+        <ul>
+            <li><strong>Master en Data Science en Santé</strong> - Université XYZ (2022 - 2024)
+                <ul>
+                    <li>Spécialisation en intelligence artificielle appliquée à la santé.</li>
+                    <li>Projets sur l'analyse des données cliniques et la prédiction des maladies.</li>
+                </ul>
+            </li>
+            <li><strong>Licence en Sciences pour la Santé</strong> - Université ABC (2019 - 2022)
+                <ul>
+                    <li>Acquisition de bases solides en biostatistiques et épidémiologie.</li>
+                    <li>Introduction à la programmation en Python et R.</li>
+                </ul>
+            </li>
+        </ul>
     </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
