--- a/skills.html
+++ b/skills.html
@@ -1,56 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills - Ethan Lavogez</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Portfolio - Ethan Lavogez</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container-fluid">
-            <!-- Brand -->
-            <a class="navbar-brand" href="#">Ethan Lavogez</a>
-            
-            <!-- Hamburger menu for small screens -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Left-aligned navigation links -->
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">A propos de moi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="skills.html">Compétences</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="experience.html">Experiences</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="education.html">Formation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-
-                <!-- Right-aligned custom tab -->
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-primary" href="custom.html">Custom Onglet</a>
-                    </li>
-                </ul>
+    <header class="bg-light p-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div>
+                <h1 class="m-0">Ethan Lavogez</h1>
+                <h3 class="m-0">Student in Healthcare Data Science</h3>
             </div>
+            <nav>
+                <ul class="nav nav-tabs justify-content-end" id="portfolioTabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="Home-tab" data-bs-toggle="tab" href="#Home" role="tab" aria-controls="Home" aria-selected="true">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="about-tab" data-bs-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false">A propos de moi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="Skills-tab" data-bs-toggle="tab" href="#Skills" role="tab" aria-controls="Skills" aria-selected="false">Compétences</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="Experiences-tab" data-bs-toggle="tab" href="#Experiences" role="tab" aria-controls="Experiences" aria-selected="false">Experiences</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="Formation-tab" data-bs-toggle="tab" href="#Formation" role="tab" aria-controls="Formation" aria-selected="false">Formation</a>    
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="Contact-tab" data-bs-toggle="tab" href="#Contact" role="tab" aria-controls="Contact" aria-selected="false">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </nav>
+    </header>
 
     <!-- Page Content -->
     <div class="container" style="margin-top: 80px;">
